--- a/css/menu.css
+++ b/css/menu.css
@@ -1,15 +1,16 @@
 
-   nav{
+nav{
     width: 100%;
     background-color: rgba(4, 140, 244, 0.759);
     color: white;
-    position: fixed; top: 0;
+    position: absolute; top: 0;
 }
   ul {
     display: flex;
   }
   ul li {
     list-style: none;
+    
   }
   ul li a {
     position: relative;
