--- a/css/estilo.css
+++ b/css/estilo.css
@@ -129,3 +129,31 @@ body.dark-mode nav{
     color: var(--colorletramenu_oscuro);
 }
 
+@media (max-width:1024px){
+    .toggle-menu{
+    display: none;
+    }
+    
+    .main-menu{
+    flex-direction: column;
+    transform: translateY(-100%);
+        
+    }
+    .main-menu--show{
+    transform: translateY(0%);
+    }
+    }
+    @media(max-width:480px){
+    .toggle-menu{
+    display: block;
+    }
+    .main-menu{
+    flex-direction: column;
+    transform: translateY(-200%);
+        
+    }
+    .main-menu--show{
+        transform: translateY(0%);
+        
+    }
+    }
